<resources>
    <string name="app_name">DiabetesFits</string>
    <string name="app_intro_done">START</string>
    <string name="app_intro_scn0_title">Diabetes Grue Fitness</string>
    <string name="app_intro_scn0">안녕하세요 당뇨그루-피트니스를 설치해주셔서 감사합니다.
        운동부하 자동획득 디바이스와 혈당 입력을 통해 목표 혈당을 유지해보세요! 디바이스가 없어도 괜찮습니다.
        꾸준히 운동 입력과 혈당 입력만으로 혈당 관리를 시작해보세요</string>
    <string name="app_intro_scn1_title">Management Glucose with Fitness Machine</string>
    <string name="app_intro_scn1">목표 혈당 구간을 유지를 위해서 꾸준한 운동이 필요합니다.
        이제 당뇨그루 운동 부하 자동 기록 디바이스가 여러분의 운동 기록을 편하게 도와줄겁니다.
        운동 전/후 혈당 기록으로 목표하는 혈당 유지를 이뤄보세요.</string>
    <string name="app_intro_scn2_title">Connect Automatic Fitness Device</string>
    <string name="app_intro_scn2">Treadmill 과 Indoor Bike 중 운동부하 자동 기록기 스캔을 통해 장비를 등록하세요.
        장비를 검색하기 위해서 1개의 권한 허가가 필요합니다.
        만약 허용하지 않는다면 장비 검색이 되지 않습니다.</string>
    <string name="permission_alert_title">This app needs location access</string>
    <string name="permission_alert_message">Please grant location access so this app can detect peripherals.</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <string name="feed">FEED</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="activity">ACTIVITY</string>
    <string name="diary">DIARY</string>
    <string name="education">EDUCATION</string>
    <string name="settings">SETTINGS</string>
    <string name="title_activity_settings">Settings</string>
    <string name="candidate_item_device_image">Device image</string>
    <string name="controlcenter_start_activity_tracks">Your activity tracks</string>
    <string name="controlcenter_fetch_activity_data">Synchronize</string>
    <string name="not_connected">Not connected</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <string name="msg_no_browser">No app found to open the url</string>
    <string name="msg_unsupported_op">Unsupported operation</string>
    <string name="device_choose_treadmill">트레드밀 장비를 추가합니다. 운동부하자동기록 디바이스가 당신의 운동 기록을 보다 자유롭게 도와줄겁니다.</string>
    <string name="device_choose_ergometer">실내 자전거 장비를 추가합니다. 운동부하자동기록 디바이스가 당신의 운동 기록을 보다 자유롭게 도와줄겁니다.</string>
    <string name="device_choose_bsm">혈당 채혈기의 장비를 추가합니다. 혈당기와 연결하여 혈당기 데이터 동기화 가능합니다.</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle__not_bonded">AVAILABLE DEVICES:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="SEARCH">Search</string>
    <string name="STOP">Stop</string>
    <string name="CLOSE">Close</string>
    <string name="ValidationWarningPopup_31">This mobile device doesn\'t support Bluetooth 4.0.</string>
    <string name="bond_none">Failed to connect to Bluetooth.\nPlease, try to reconnect.</string>
    <string name="bonded">Connected to Bluetooth.\nPlease, turn meter on again to download glucose data.</string>
    <string name="not_supported">This mobile device doesn\'t support Bluetooth 4.0. </string>
    <string name="gls_operation_not_supported">Download failed (Code 109)</string>
    <string name="gls_operation_failed">Download failed (Code 110)</string>
    <string name="ERROR_CONNECTION_STATE_CHANGE">Download failed (Code 111)</string>
    <string name="ERROR_DISCOVERY_SERVICE">Download failed (Code 112)</string>
    <string name="ERROR_WRITE_DESCRIPTOR">Download failed (Code 113)</string>
    <string name="ERROR_WRITE_CHARACTERISTIC">Download failed (Code 114)</string>
    <string name="ERROR_AUTH_ERROR_WHILE_BONDED">Download failed (Code 115)</string>
    <string name="ERROR_SEQUENCE_NUMBER">Download failed (Code 116)</string>
    <string name="ValidationWarningPopup_36">No more than 10 registered meters allowed. Please delete unused meters.</string>
    <string name="error_software_revision">The meter\'s software version does not support. Please update the SmartLog.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="setting_my_info_title">Account</string>
    <string name="setting_my_info_menu_0">Edit Profile</string>
    <string name="setting_my_info_menu_1">Feedback</string>
    <string name="setting_management_tool_title">Management Tool</string>
    <string name="setting_management_tool_menu0">Reminder</string>
    <string name="setting_management_tool_menu1">Alarm</string>
    <string name="setting_management_tool_menu2">Fitness Load Test</string>
    <string name="setting_databases_title">Databases</string>
    <string name="setting_databases_menu_1">Management</string>
    <string name="setting_more_title">More</string>
    <string name="setting_more_menu_0">About App</string>
    <string name="setting_more_menu_1">Licenses</string>
    <string name="setting_more_menu_2">Developer</string>
    <string name="kdane_parent_0">당뇨병이란?</string>
    <string name="kdane_parent_1">혈당 측정 및 관리</string>
    <string name="kdane_parent_2">올바른 식사요법</string>
    <string name="kdane_parent_3">올바른 운동요법</string>
    <string name="kdane_parent_4">경구용 혈당 강하제</string>
    <string name="kdane_parent_5">인슐린 주사법</string>
    <string name="kdane_parent_6">저혈당 관리</string>
    <string name="kdane_parent_7">아픈날의 관리</string>
    <string name="kdane_parent_8">건강한 발 관리방법</string>
    <string name="kdane_child_parent_00">당뇨병의 종류와 원인</string>
    <string name="kdane_child_parent_01">당뇨병 이란?</string>
    <string name="kdane_child_parent_02">당뇨병의 증상</string>
    <string name="kdane_child_parent_03">당뇨병의 정기검진</string>
    <string name="kdane_child_parent_04">당뇨병의 진단</string>
    <string name="kdane_child_parent_10">자가혈당 측정을 해야하는 이유</string>
    <string name="kdane_child_parent_11">혈당측정법</string>
    <string name="kdane_child_parent_12">혈당 조절 목표</string>
    <string name="kdane_child_parent_13">혈당 검사 시간</string>
    <string name="kdane_child_parent_20">식사요법의 3원칙</string>
    <string name="kdane_child_parent_21">나의 표준체중과 1일 필요열량</string>
    <string name="kdane_child_parent_22">식품교환표</string>
    <string name="kdane_child_parent_23">당뇨식 상차림의 예</string>
    <string name="kdane_child_parent_30">운동전 평가</string>
    <string name="kdane_child_parent_31">운동방법</string>
    <string name="kdane_child_parent_32">효과적인 운동을 위하여 알아둘 점</string>
    <string name="kdane_child_parent_40">설폰요소계</string>
    <string name="kdane_child_parent_41">비구아나이드계</string>
    <string name="kdane_child_parent_42">알파글루코시다제억제제</string>
    <string name="kdane_child_parent_43">치아졸리딘디온계</string>
    <string name="kdane_child_parent_44">인크레틴제제</string>
    <string name="kdane_child_parent_45">약물상호작용</string>
    <string name="kdane_child_parent_50">인슐린이란?</string>
    <string name="kdane_child_parent_51">인슐린의 종류와 작용시간</string>
    <string name="kdane_child_parent_52">인슐린주사시간과 모양</string>
    <string name="kdane_child_parent_53">인슐린 주사부위</string>
    <string name="kdane_child_parent_54">인슐린의 보관방법</string>
    <string name="kdane_child_parent_55">인슐린주사시 주의사항</string>
    <string name="kdane_child_parent_56">인슐린 펌프</string>
    <string name="kdane_child_parent_60">저혈당이란?</string>
    <string name="kdane_child_parent_61">저혈당의 증상</string>
    <string name="kdane_child_parent_62">저혈당의 대처방법</string>
    <string name="kdane_child_parent_63">야간 저혈당</string>
    <string name="kdane_child_parent_70">아픈날의 몸의 변화</string>
    <string name="kdane_child_parent_71">아픈날의 관리방법</string>
    <string name="kdane_child_parent_80">발관리의 중요성</string>
    <string name="kdane_child_parent_81">발관리 방법</string>
    <string name="kdane_child_parent_82">발의 피부상태 관찰하기</string>
    <string name="kdane_child_parent_83">당뇨병성 발의 합병증 예방을 위한 지침</string>
    <string-array name="job_titles">
        <item>All categories</item>
        <item>Glucose</item>
        <item>Workout</item>
        <item>Meal</item>
        <item>Insulin</item>
        <item>Other</item>
    </string-array>
    <string name="str_all_selected">All categories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diary_now">N</string>
    <string name="diary_mon">Mon</string>
    <string name="diary_tue">Tue</string>
    <string name="diary_wed">Wed</string>
    <string name="diary_thu">Thu</string>
    <string name="diary_fri">Fri</string>
    <string name="diary_sat">Sat</string>
    <string name="diary_sun">Sun</string>
    <string name="diary_today">Today</string>
    <string name="diary_expand">Expand</string>
    <string name="diary_next">Next</string>
    <string name="diary_before">Before</string>
    <string name="under_construction">UNDER CONSTRUCTION</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
</resources>