<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.sync.SyncBMSResultActivity">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.SettingActivityV2">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_add_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/default_background"
            android:theme="@style/AppTheme.AppBarOverlay">

            <ImageView
                android:id="@+id/home"
                style="@style/ClickableImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:src="@drawable/ic_arrow_back_black_24dp" />


            <android.support.v7.widget.Toolbar
                app:titleTextAppearance="@style/Toolbar.TitleText"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/default_background"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Setting"
                app:titleTextColor="@color/black" />

        </android.support.design.widget.AppBarLayout>

        <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/fab_margin"-->
        <!--android:clickable="true"-->
        <!--android:src="@drawable/ic_add_black_24dp"-->
        <!--app:backgroundTint="@color/shopAccent"-->
        <!--app:elevation="6dp"-->
        <!--&lt;!&ndash;app:layout_anchor="@+id/bsm_recycler_view"&ndash;&gt;-->
        <!--app:layout_anchorGravity="bottom|end"-->
        <!--app:rippleColor="@color/shopAccent" />-->

    </android.support.design.widget.CoordinatorLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coordinator_layout"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_perm_identity_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/setting_my_info_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/secondarytext" />

            <Button
                android:id="@+id/edit_profile_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="start|center"
                android:text="@string/setting_my_info_menu_0" />

            <Button
                android:id="@+id/feedback_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="start|center"
                android:text="@string/setting_my_info_menu_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_handyman_tools" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/setting_management_tool_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/secondarytext" />

            <Button
                android:id="@+id/reminder_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="start|center"
                android:text="@string/setting_management_tool_menu0" />

            <Button
                android:id="@+id/alarm_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="start|center"
                android:text="@string/setting_management_tool_menu1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_storage_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/setting_databases_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/secondarytext" />

            <Button
                android:id="@+id/db_management_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="start|center"
                android:text="@string/setting_databases_menu_1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_inbox_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/setting_more_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/secondarytext" />

            <Button
                android:id="@+id/about_app_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="start|center"
                android:text="@string/setting_more_menu_0" />

            <Button
                android:id="@+id/licenses_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="start|center"
                android:text="@string/setting_more_menu_1" />

            <Button
                android:id="@+id/developer_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:fontFamily="@font/noto_sans"
                android:gravity="start|center"
                android:text="@string/setting_more_menu_2" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center|center_horizontal"
                android:layout_margin="8dp"
                android:background="@drawable/setting_button"
                android:drawableStart="@drawable/ic_leak_remove_black_24dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="Logout" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>


