<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:contentPadding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/device_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/candidate_item_device_image"
                android:clickable="true"
                android:longClickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/device_icon"
                android:layout_marginTop="8dp"
                android:focusable="true" />

            <TextView
                android:id="@+id/device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/device_image"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="48dp"
                android:gravity="center"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:text="My Pebble Watch" />

            <TextView
                android:id="@+id/device_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/device_name"
                android:layout_toEndOf="@id/device_image"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="48dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                tools:text="@string/connecting" />

            <ImageView
                android:id="@+id/device_action_show_activity_tracks"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/device_image"
                android:layout_margin="4dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/controlcenter_start_activity_tracks"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:tint="@color/white"
                card_view:srcCompat="@drawable/ic_activity_tracks"
                android:focusable="true" />


            <ImageView
                android:id="@+id/device_info_image"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:layout_below="@id/device_image"
                android:layout_toEndOf="@id/device_action_show_activity_tracks"
                android:contentDescription="@string/candidate_item_device_image"
                android:tint="@color/white"
                android:background="?android:attr/selectableItemBackground"
                card_view:srcCompat="@drawable/ic_info_outline_black_24dp"
                android:focusable="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


</android.support.design.widget.CoordinatorLayout>
